[package]
name = "Relational Database Management System"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
temp_testdir = "0.2.3"
rand = "0.8"
csv="=1.1.*"